generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  USER
  ADMIN
}

enum UserType {
  ELEMENTARY
  MIDDLE
  HIGH
  UNIVERSITY
  EXAM_PREP
  WORKER
  SENIOR
}

enum AccountStatus {
  ACTIVE
  SUSPENDED
  DEACTIVATED
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  DONE
}

enum Priority {
  LOW
  MEDIUM
  HIGH
}

enum NotificationType {
  DEADLINE
  REVIEW
  CHALLENGE
}

enum PostCategory {
  QUESTION
  FREE
  STUDY_PROOF
}

enum ReactionType {
  LIKE
  DISLIKE
}

enum CommunityReportStatus {
  PENDING
  DISMISSED
  RESOLVED
}

enum CommunityReportTargetType {
  POST
  COMMENT
}

enum ChallengeStatus {
  IN_PROGRESS
  CLOSED
}

enum Difficulty {
  EASY
  MEDIUM
  HARD
}

enum AdminActionType {
  SUSPEND_USER
  HIDE_POST
  DELETE_COMMENT
  MODERATE_CHALLENGE
}

enum RewardQuestType {
  TOTAL_STUDY_MINUTES
  TASK_COMPLETION
}

enum UserQuestStatus {
  IN_PROGRESS
  ACHIEVED
  CLAIMED
}

enum PointTransactionType {
  EARN
  SPEND
  ADJUST
}

enum ShopItemType {
  PROFILE_IMAGE
  PROFILE_BACKGROUND
  TITLE
}

enum FriendshipStatus {
  PENDING
  ACCEPTED
  REJECTED
}

model User {
  id                      Int                         @id @default(autoincrement())
  loginId                 String                      @unique @map("login_id")
  passwordHash            String                      @map("password_hash")
  name                    String
  role                    Role                        @default(USER)
  userType                UserType?                   @map("user_type")
  status                  AccountStatus               @default(ACTIVE)
  createdAt               DateTime                    @default(now()) @map("created_at")
  updatedAt               DateTime                    @updatedAt @map("updated_at")
  profile                 UserProfile?
  schedules               StudySchedule[]
  tasks                   StudyTask[]
  notifications           Notification[]
  notes                   StudyNote[]
  aiQuestions             AIQuestion[]
  wrongAnswerNotes        WrongAnswerNote[]
  quizzes                 Quiz[]
  aiRecommendations       AIRecommendation[]
  focusSessions           FocusSession[]
  statistics              StudyStatistics[]
  posts                   BoardPost[]
  comments                Comment[]
  communityReactions      CommunityReaction[]
  communityBookmarks      CommunityBookmark[]
  communityReports        CommunityReport[]           @relation("CommunityReportReporter")
  resolvedReports         CommunityReport[]           @relation("CommunityReportResolver")
  accessibilityPreference AccessibilityPreference?
  voiceRequests           VoiceAccessibilityRequest[]
  createdChallenges       StudyChallenge[]
  challengeMembers        ChallengeMember[]
  rankings                Ranking[]
  adminActions            AdminAction[]
  rewardAccount           RewardAccount?
  userBadges              UserBadge[]
  userQuests              UserQuest[]
  pointTransactions       PointTransaction[]
  sentFriendships         Friendship[]                @relation("FriendshipRequester")
  receivedFriendships     Friendship[]                @relation("FriendshipAddressee")
  shopPurchases           UserShopPurchase[]

  @@map("users")
}

model Friendship {
  id          Int              @id @default(autoincrement())
  requesterId Int              @map("requester_id")
  addresseeId Int              @map("addressee_id")
  status      FriendshipStatus @default(PENDING)
  createdAt   DateTime         @default(now()) @map("created_at")
  updatedAt   DateTime         @updatedAt @map("updated_at")
  requester   User             @relation("FriendshipRequester", fields: [requesterId], references: [id], onDelete: Cascade)
  addressee   User             @relation("FriendshipAddressee", fields: [addresseeId], references: [id], onDelete: Cascade)

  @@unique([requesterId, addresseeId])
  @@index([requesterId, status])
  @@index([addresseeId, status])
  @@map("friendships")
}

model UserProfile {
  id                   Int      @id @default(autoincrement())
  userId               Int      @unique @map("user_id")
  learningGoal         String?  @map("learning_goal")
  preferredSubject     String?  @map("preferred_subject")
  profileImageUrl      String?  @map("profile_image_url")
  profileBackgroundUrl String?  @map("profile_background_url")
  titleText            String?  @map("title_text")
  createdAt            DateTime @default(now()) @map("created_at")
  updatedAt            DateTime @updatedAt @map("updated_at")
  user                 User     @relation(fields: [userId], references: [id])

  @@map("user_profiles")
}

model StudySchedule {
  id            Int            @id @default(autoincrement())
  userId        Int            @map("user_id")
  title         String
  subject       String?
  startAt       DateTime       @map("start_at")
  endAt         DateTime?      @map("end_at")
  priority      Priority       @default(MEDIUM)
  memo          String?
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")
  user          User           @relation(fields: [userId], references: [id])
  tasks         StudyTask[]
  notifications Notification[]

  @@map("study_schedules")
}

model StudyTask {
  id            Int            @id @default(autoincrement())
  userId        Int            @map("user_id")
  scheduleId    Int?           @map("schedule_id")
  title         String
  status        TaskStatus     @default(TODO)
  dueDate       DateTime?      @map("due_date")
  priority      Priority       @default(MEDIUM)
  memo          String?
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")
  user          User           @relation(fields: [userId], references: [id])
  schedule      StudySchedule? @relation(fields: [scheduleId], references: [id], onDelete: SetNull)
  notifications Notification[]
  focusSessions FocusSession[]

  @@map("study_tasks")
}

model Notification {
  id          Int              @id @default(autoincrement())
  userId      Int              @map("user_id")
  scheduleId  Int?             @map("schedule_id")
  taskId      Int?             @map("task_id")
  type        NotificationType
  message     String
  scheduledAt DateTime         @map("scheduled_at")
  readAt      DateTime?        @map("read_at")
  createdAt   DateTime         @default(now()) @map("created_at")
  user        User             @relation(fields: [userId], references: [id])
  schedule    StudySchedule?   @relation(fields: [scheduleId], references: [id], onDelete: SetNull)
  task        StudyTask?       @relation(fields: [taskId], references: [id], onDelete: SetNull)

  @@map("notifications")
}

model StudyNote {
  id               Int               @id @default(autoincrement())
  userId           Int               @map("user_id")
  title            String
  content          String
  subject          String?
  tags             String[]
  createdAt        DateTime          @default(now()) @map("created_at")
  updatedAt        DateTime          @updatedAt @map("updated_at")
  user             User              @relation(fields: [userId], references: [id])
  aiQuestions      AIQuestion[]
  wrongAnswerNotes WrongAnswerNote[]
  quizzes          Quiz[]

  @@map("study_notes")
}

model AIQuestion {
  id        Int        @id @default(autoincrement())
  userId    Int        @map("user_id")
  noteId    Int?       @map("note_id")
  question  String
  answer    String?
  subject   String?
  createdAt DateTime   @default(now()) @map("created_at")
  user      User       @relation(fields: [userId], references: [id])
  note      StudyNote? @relation(fields: [noteId], references: [id], onDelete: SetNull)

  @@map("ai_questions")
}

model WrongAnswerNote {
  id          Int        @id @default(autoincrement())
  userId      Int        @map("user_id")
  noteId      Int?       @map("note_id")
  problem     String
  userAnswer  String?    @map("user_answer")
  explanation String?
  weakType    String?    @map("weak_type")
  createdAt   DateTime   @default(now()) @map("created_at")
  user        User       @relation(fields: [userId], references: [id])
  note        StudyNote? @relation(fields: [noteId], references: [id], onDelete: SetNull)

  @@map("wrong_answer_notes")
}

model Quiz {
  id         Int            @id @default(autoincrement())
  userId     Int            @map("user_id")
  noteId     Int?           @map("note_id")
  title      String
  difficulty Difficulty     @default(MEDIUM)
  createdAt  DateTime       @default(now()) @map("created_at")
  user       User           @relation(fields: [userId], references: [id])
  note       StudyNote?     @relation(fields: [noteId], references: [id], onDelete: SetNull)
  questions  QuizQuestion[]

  @@map("quizzes")
}

model QuizQuestion {
  id          Int     @id @default(autoincrement())
  quizId      Int     @map("quiz_id")
  question    String
  choicesJson Json    @map("choices_json")
  answer      String
  explanation String?
  orderNo     Int     @default(0) @map("order_no")
  quiz        Quiz    @relation(fields: [quizId], references: [id])

  @@map("quiz_questions")
}

model AIRecommendation {
  id                 Int      @id @default(autoincrement())
  userId             Int      @map("user_id")
  basisJson          Json     @map("basis_json")
  recommendationJson Json     @map("recommendation_json")
  createdAt          DateTime @default(now()) @map("created_at")
  user               User     @relation(fields: [userId], references: [id])

  @@map("ai_recommendations")
}

model AccessibilityPreference {
  id                    Int      @id @default(autoincrement())
  userId                Int      @unique @map("user_id")
  textScale             Float    @default(1.0) @map("text_scale")
  highContrast          Boolean  @default(false) @map("high_contrast")
  elementaryFriendlyUi  Boolean  @default(false) @map("elementary_friendly_ui")
  voiceInputEnabled     Boolean  @default(false) @map("voice_input_enabled")
  voiceOutputEnabled    Boolean  @default(false) @map("voice_output_enabled")
  reviewReminderEnabled Boolean  @default(false) @map("review_reminder_enabled")
  reminderTime          String?  @map("reminder_time")
  createdAt             DateTime @default(now()) @map("created_at")
  updatedAt             DateTime @updatedAt @map("updated_at")
  user                  User     @relation(fields: [userId], references: [id])

  @@map("accessibility_preferences")
}

model VoiceAccessibilityRequest {
  id         Int      @id @default(autoincrement())
  userId     Int      @map("user_id")
  mode       String
  voiceType  String?  @map("voice_type")
  inputText  String?  @map("input_text")
  transcript String?
  createdAt  DateTime @default(now()) @map("created_at")
  user       User     @relation(fields: [userId], references: [id])

  @@index([userId])
  @@index([mode])
  @@map("voice_accessibility_requests")
}

model FocusSession {
  id         Int        @id @default(autoincrement())
  userId     Int        @map("user_id")
  taskId     Int?       @map("task_id")
  startedAt  DateTime   @map("started_at")
  endedAt    DateTime   @map("ended_at")
  durationMs Int        @map("duration_ms")
  memo       String?
  createdAt  DateTime   @default(now()) @map("created_at")
  user       User       @relation(fields: [userId], references: [id])
  task       StudyTask? @relation(fields: [taskId], references: [id], onDelete: SetNull)

  @@map("focus_sessions")
}

model StudyStatistics {
  id             Int      @id @default(autoincrement())
  userId         Int      @map("user_id")
  periodStart    DateTime @map("period_start")
  periodEnd      DateTime @map("period_end")
  totalMinutes   Int      @default(0) @map("total_minutes")
  completionRate Float?   @map("completion_rate")
  statisticsJson Json?    @map("statistics_json")
  createdAt      DateTime @default(now()) @map("created_at")
  user           User     @relation(fields: [userId], references: [id])

  @@map("study_statistics")
}

model BoardPost {
  id        Int                 @id @default(autoincrement())
  userId    Int                 @map("user_id")
  category  PostCategory        @default(FREE)
  title     String
  content   String
  reported  Boolean             @default(false)
  createdAt DateTime            @default(now()) @map("created_at")
  updatedAt DateTime            @updatedAt @map("updated_at")
  user      User                @relation(fields: [userId], references: [id])
  comments  Comment[]
  reactions CommunityReaction[]
  bookmarks CommunityBookmark[]
  reports   CommunityReport[]

  @@map("board_posts")
}

model Comment {
  id        Int       @id @default(autoincrement())
  postId    Int       @map("post_id")
  userId    Int       @map("user_id")
  content   String
  reported  Boolean   @default(false)
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  post      BoardPost @relation(fields: [postId], references: [id])
  user      User      @relation(fields: [userId], references: [id])
  reports   CommunityReport[]

  @@map("comments")
}

model CommunityReaction {
  id        Int          @id @default(autoincrement())
  postId    Int          @map("post_id")
  userId    Int          @map("user_id")
  type      ReactionType
  createdAt DateTime     @default(now()) @map("created_at")
  updatedAt DateTime     @updatedAt @map("updated_at")
  post      BoardPost    @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User         @relation(fields: [userId], references: [id])

  @@unique([postId, userId])
  @@index([postId])
  @@index([userId])
  @@index([type])
  @@map("community_reactions")
}

model CommunityBookmark {
  id        Int       @id @default(autoincrement())
  postId    Int       @map("post_id")
  userId    Int       @map("user_id")
  createdAt DateTime  @default(now()) @map("created_at")
  post      BoardPost @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [userId], references: [id])

  @@unique([postId, userId])
  @@index([postId])
  @@index([userId])
  @@map("community_bookmarks")
}

model CommunityReport {
  id             Int                       @id @default(autoincrement())
  reporterId     Int                       @map("reporter_id")
  targetType     CommunityReportTargetType @map("target_type")
  postId         Int?                      @map("post_id")
  commentId      Int?                      @map("comment_id")
  reason         String
  status         CommunityReportStatus     @default(PENDING)
  resolvedById   Int?                      @map("resolved_by_id")
  resolvedAt     DateTime?                 @map("resolved_at")
  resolutionNote String?                   @map("resolution_note")
  createdAt      DateTime                  @default(now()) @map("created_at")
  updatedAt      DateTime                  @updatedAt @map("updated_at")
  reporter       User                      @relation("CommunityReportReporter", fields: [reporterId], references: [id])
  post           BoardPost?                @relation(fields: [postId], references: [id], onDelete: Cascade)
  comment        Comment?                  @relation(fields: [commentId], references: [id], onDelete: Cascade)
  resolvedBy     User?                     @relation("CommunityReportResolver", fields: [resolvedById], references: [id], onDelete: SetNull)

  @@index([reporterId])
  @@index([postId])
  @@index([commentId])
  @@index([status])
  @@index([targetType])
  @@index([resolvedById])
  @@map("community_reports")
}

model StudyChallenge {
  id          Int               @id @default(autoincrement())
  creatorId   Int               @map("creator_id")
  title       String
  description String?
  goalMinutes Int               @map("goal_minutes")
  startDate   DateTime          @map("start_date")
  endDate     DateTime          @map("end_date")
  status      ChallengeStatus   @default(IN_PROGRESS)
  createdAt   DateTime          @default(now()) @map("created_at")
  creator     User              @relation(fields: [creatorId], references: [id])
  members     ChallengeMember[]
  rankings    Ranking[]

  @@map("study_challenges")
}

model ChallengeMember {
  id              Int            @id @default(autoincrement())
  challengeId     Int            @map("challenge_id")
  userId          Int            @map("user_id")
  progressMinutes Int            @default(0) @map("progress_minutes")
  joinedAt        DateTime       @default(now()) @map("joined_at")
  challenge       StudyChallenge @relation(fields: [challengeId], references: [id])
  user            User           @relation(fields: [userId], references: [id])

  @@unique([challengeId, userId])
  @@map("challenge_members")
}

model Ranking {
  id           Int             @id @default(autoincrement())
  userId       Int             @map("user_id")
  challengeId  Int?            @map("challenge_id")
  periodStart  DateTime        @map("period_start")
  periodEnd    DateTime        @map("period_end")
  rank         Int
  studyMinutes Int             @map("study_minutes")
  createdAt    DateTime        @default(now()) @map("created_at")
  user         User            @relation(fields: [userId], references: [id])
  challenge    StudyChallenge? @relation(fields: [challengeId], references: [id], onDelete: SetNull)

  @@map("rankings")
}

model AdminAction {
  id         Int             @id @default(autoincrement())
  adminId    Int             @map("admin_id")
  targetType String          @map("target_type")
  targetId   Int             @map("target_id")
  actionType AdminActionType @map("action_type")
  reason     String?
  createdAt  DateTime        @default(now()) @map("created_at")
  admin      User            @relation(fields: [adminId], references: [id])

  @@map("admin_actions")
}

model RewardAccount {
  id                Int                @id @default(autoincrement())
  userId            Int                @unique @map("user_id")
  pointBalance      Int                @default(0) @map("point_balance")
  createdAt         DateTime           @default(now()) @map("created_at")
  updatedAt         DateTime           @updatedAt @map("updated_at")
  user              User               @relation(fields: [userId], references: [id])
  pointTransactions PointTransaction[]

  @@map("reward_accounts")
}

model Badge {
  id          Int           @id @default(autoincrement())
  code        String        @unique
  name        String
  description String?
  iconUrl     String?       @map("icon_url")
  condition   String?
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @updatedAt @map("updated_at")
  userBadges  UserBadge[]
  quests      RewardQuest[]

  @@map("badges")
}

model UserBadge {
  id         Int      @id @default(autoincrement())
  userId     Int      @map("user_id")
  badgeId    Int      @map("badge_id")
  achievedAt DateTime @default(now()) @map("achieved_at")
  user       User     @relation(fields: [userId], references: [id])
  badge      Badge    @relation(fields: [badgeId], references: [id])

  @@unique([userId, badgeId])
  @@index([badgeId])
  @@map("user_badges")
}

model RewardQuest {
  id           Int             @id @default(autoincrement())
  code         String          @unique
  title        String
  description  String?
  type         RewardQuestType
  targetValue  Int             @map("target_value")
  rewardPoints Int             @default(0) @map("reward_points")
  badgeId      Int?            @map("badge_id")
  isActive     Boolean         @default(true) @map("is_active")
  createdAt    DateTime        @default(now()) @map("created_at")
  updatedAt    DateTime        @updatedAt @map("updated_at")
  badge        Badge?          @relation(fields: [badgeId], references: [id], onDelete: SetNull)
  userQuests   UserQuest[]

  @@index([type])
  @@index([isActive])
  @@index([badgeId])
  @@map("reward_quests")
}

model UserQuest {
  id            Int             @id @default(autoincrement())
  userId        Int             @map("user_id")
  questId       Int             @map("quest_id")
  progressValue Int             @default(0) @map("progress_value")
  status        UserQuestStatus @default(IN_PROGRESS)
  achievedAt    DateTime?       @map("achieved_at")
  claimedAt     DateTime?       @map("claimed_at")
  createdAt     DateTime        @default(now()) @map("created_at")
  updatedAt     DateTime        @updatedAt @map("updated_at")
  user          User            @relation(fields: [userId], references: [id])
  quest         RewardQuest     @relation(fields: [questId], references: [id])

  @@unique([userId, questId])
  @@index([questId])
  @@index([status])
  @@map("user_quests")
}

model PointTransaction {
  id          Int                  @id @default(autoincrement())
  userId      Int                  @map("user_id")
  accountId   Int                  @map("account_id")
  type        PointTransactionType
  amount      Int
  reason      String?
  sourceType  String?              @map("source_type")
  sourceId    Int?                 @map("source_id")
  createdAt   DateTime             @default(now()) @map("created_at")
  user        User                 @relation(fields: [userId], references: [id])
  account     RewardAccount        @relation(fields: [accountId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([accountId])
  @@index([type])
  @@map("point_transactions")
}

model ShopItem {
  id          Int                @id @default(autoincrement())
  code        String             @unique
  name        String
  description String?
  type        ShopItemType
  price       Int                @default(0)
  assetUrl    String?            @map("asset_url")
  isActive    Boolean            @default(true) @map("is_active")
  createdAt   DateTime           @default(now()) @map("created_at")
  updatedAt   DateTime           @updatedAt @map("updated_at")
  purchases   UserShopPurchase[]

  @@index([type])
  @@index([isActive])
  @@map("shop_items")
}

model UserShopPurchase {
  id          Int      @id @default(autoincrement())
  userId      Int      @map("user_id")
  itemId      Int      @map("item_id")
  purchasedAt DateTime @default(now()) @map("purchased_at")
  user        User     @relation(fields: [userId], references: [id])
  item        ShopItem @relation(fields: [itemId], references: [id])

  @@unique([userId, itemId])
  @@index([itemId])
  @@map("user_shop_purchases")
}
